--- a/app/views/beta-sprint-10/regulator-scotland/recognition-decision-data-chartered-accountant-2020-edit.html
+++ b/app/views/beta-sprint-10/regulator-scotland/recognition-decision-data-chartered-accountant-2020-edit.html
@@ -78,9 +78,9 @@
         value: data['decision-data-regulator'],
         items: [
           {
-            value: "Institute of Chartered Accountants in England and Wales",
-            text: "Institute of Chartered Accountants in England and Wales",
-            selected: data['decision-data-regulator'] == "Institute of Chartered Accountants in England and Wales"
+            value: "Institute of Chartered Accountants in Scotland",
+            text: "Institute of Chartered Accountants in Scotland",
+            selected: data['decision-data-regulator'] == "Institute of Chartered Accountants in Scotland"
           }
         ]
       }) }}
@@ -97,34 +97,9 @@
         value: data['decision-data-profession'],
         items: [
           {
-            value: "Administration of Oaths",
-            text: "Administration of Oaths",
-            selected: data['decision-data-profession'] == "Administration of Oaths"
-          },
-          {
             value: "Chartered Accountant",
             text: "Chartered Accountant",
             selected: data['decision-data-profession'] == "Chartered Accountant"
-          },
-          {
-            value: "Insolvency Practitioner",
-            text: "Insolvency Practitioner",
-            selected: data['decision-data-profession'] == "Insolvency Practitioner"
-          },
-          {
-            value: "Local Public Audit",
-            text: "Local Public Audit",
-            selected: data['decision-data-profession'] == "Local Public Audit"
-          },
-          {
-            value: "Probate Practitioner (non-contentious probate)",
-            text: "Probate Practitioner (non-contentious probate)",
-            selected: data['decision-data-profession'] == "Probate Practitioner (non-contentious probate)"
-          },
-          {
-            value: "Statutory Audit",
-            text: "Statutory Audit",
-            selected: data['decision-data-profession'] == "Statutory Audit"
           }
         ]
       }) }}
