--- a/app/views/beta-sprint-10/regulator-england-and-wales/recognition-decision-data-chartered-accountant-2019.html
+++ b/app/views/beta-sprint-10/regulator-england-and-wales/recognition-decision-data-chartered-accountant-2019.html
@@ -88,9 +88,8 @@
         ]
       }) }}
 
-
-      <h3 class="govuk-heading-m">Route #1</h3>
       <table class="govuk-table rpr-decision-data__table-container">
+        <caption class="govuk-table__caption govuk-table__caption--l">Route 1</caption>
         <thead class="govuk-table__head">
           <tr class="govuk-table__row">
             <th scope="col" class="govuk-table__header">Country of qualification</th>
@@ -102,7 +101,7 @@
         </thead>
         <tbody class="govuk-table__body">
           <tr class="govuk-table__row">
-            <td class="govuk-table__cell">France</td>
+            <td class="govuk-table__cell">Germany</td>
             <td class="govuk-table__cell">3</td>
             <td class="govuk-table__cell">1</td>
             <td class="govuk-table__cell">0</td>
@@ -125,8 +124,8 @@
         </tbody>
       </table>
 
-      <h3 class="govuk-heading-m">Route #2</h3>
       <table class="govuk-table rpr-decision-data__table-container">
+        <caption class="govuk-table__caption govuk-table__caption--l">Route 2</caption>
         <thead class="govuk-table__head">
           <tr class="govuk-table__row">
             <th scope="col" class="govuk-table__header">Country of qualification</th>
@@ -138,23 +137,9 @@
         </thead>
         <tbody class="govuk-table__body">
           <tr class="govuk-table__row">
-            <td class="govuk-table__cell">France</td>
+            <td class="govuk-table__cell">Brazil</td>
+            <td class="govuk-table__cell">0</td>
             <td class="govuk-table__cell">3</td>
-            <td class="govuk-table__cell">1</td>
-            <td class="govuk-table__cell">0</td>
-            <td class="govuk-table__cell">0</td>
-          </tr>
-          <tr class="govuk-table__row">
-            <td class="govuk-table__cell">Italy</td>
-            <td class="govuk-table__cell">3</td>
-            <td class="govuk-table__cell">0</td>
-            <td class="govuk-table__cell">1</td>
-            <td class="govuk-table__cell">0</td>
-          </tr>
-          <tr class="govuk-table__row">
-            <td class="govuk-table__cell">Australia</td>
-            <td class="govuk-table__cell">0</td>
-            <td class="govuk-table__cell">1</td>
             <td class="govuk-table__cell">0</td>
             <td class="govuk-table__cell">0</td>
           </tr>
@@ -169,7 +154,7 @@
       <aside class="app-related-items rpr-internal__details-page-sidebar" role="complementary">
         <h2 class="govuk-heading-s">
           Status<br>
-          <span class="govuk-body">Published</span>
+          <span class="govuk-body"><strong class="govuk-tag govuk-tag--turquoise">Published</strong></span>
         </h2>
 
         <h2 class="govuk-heading-s">
@@ -191,7 +176,38 @@
         <nav role="navigation" aria-labelledby="subsection-title">
           <ul class="govuk-list">
             <li>
-              <form action="ra-amending-a-profession-start" method="post" class="form">
+              <form action="recognition-decision-data-chartered-accountant-2019-edit" method="post" class="form">
+                <input name="decision-data-regulator" id="decision-data-regulator" value="Institute of Chartered Accountants in England and Wales" type="hidden">
+                <input name="decision-data-profession" id="decision-data-profession" value="Chartered Accountant" type="hidden">
+                <input name="decision-data-year" id="decision-data-year" value="2019" type="hidden">
+                
+                <input name="decision-data-route-1" id="decision-data-route-1" value="Route 1" type="hidden">
+                <input name="decision-data-route-1-country-1" id="decision-data-route-1-country-1" value="Germany" type="hidden">
+                <input name="decision-data-route-1-country-1-yes" id="decision-data-route-1-country-1-yes" value="3" type="hidden">
+                <input name="decision-data-route-1-country-1-yes-2" id="decision-data-route-1-country-1-yes-2" value="1" type="hidden">
+                <input name="decision-data-route-1-country-1-no" id="decision-data-route-1-country-1-no" value="0" type="hidden">
+                <input name="decision-data-route-1-country-1-no-2" id="decision-data-route-1-country-1-no-2" value="0" type="hidden">
+
+                <input name="decision-data-route-1-country-2" id="decision-data-route-1-country-2" value="Italy" type="hidden">
+                <input name="decision-data-route-1-country-2-yes" id="decision-data-route-1-country-2-yes" value="3" type="hidden">
+                <input name="decision-data-route-1-country-2-yes-2" id="decision-data-route-1-country-2-yes-2" value="0" type="hidden">
+                <input name="decision-data-route-1-country-2-no" id="decision-data-route-1-country-2-no" value="1" type="hidden">
+                <input name="decision-data-route-1-country-2-no-2" id="decision-data-route-1-country-2-no-2" value="0" type="hidden">
+
+                <input name="decision-data-route-1-country-3" id="decision-data-route-1-country-3" value="United States of America" type="hidden">
+                <input name="decision-data-route-1-country-3-yes" id="decision-data-route-1-country-3-yes" value="0" type="hidden">
+                <input name="decision-data-route-1-country-3-yes-2" id="decision-data-route-1-country-3-yes-2" value="1" type="hidden">
+                <input name="decision-data-route-1-country-3-no" id="decision-data-route-1-country-3-no" value="0" type="hidden">
+                <input name="decision-data-route-1-country-3-no-2" id="decision-data-route-1-country-3-no-2" value="0" type="hidden">
+
+                <input name="decision-data-route-2" id="decision-data-route-2" value="Route 2" type="hidden">
+                <input name="decision-data-route-2-country-1" id="decision-data-route-2-country-1" value="Brazil" type="hidden">
+                <input name="decision-data-route-2-country-1-yes" id="decision-data-route-2-country-1-yes" value="0" type="hidden">
+                <input name="decision-data-route-2-country-1-yes-2" id="decision-data-route-2-country-1-yes-2" value="3" type="hidden">
+                <input name="decision-data-route-2-country-1-no" id="decision-data-route-2-country-1-no" value="0" type="hidden">
+                <input name="decision-data-route-2-country-1-no-2" id="decision-data-route-2-country-1-no-2" value="0" type="hidden">
+
+                
                 {{ govukButton({
                   text: "Edit data",
                   classes: "govuk-button--secondary"
