--- a/app/views/beta-sprint-10/regulator-scotland/recognition-decision-data-new.html
+++ b/app/views/beta-sprint-10/regulator-scotland/recognition-decision-data-new.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-  Recognition decision data - Chartered Accountant 
+  Recognition decision data
 {% endblock %}
 
 {% block header %}
@@ -62,7 +62,7 @@
     <div class="govuk-grid-column-three-quarters">
 
       <h1 class="govuk-heading-xl">
-        <span class="govuk-caption-l">Editing recognition decision data</span>
+        <span class="govuk-caption-l">Adding new recognition decision data</span>
         Recognition decision data
       </h1>
 
@@ -78,9 +78,9 @@
         value: data['decision-data-regulator'],
         items: [
           {
-            value: "Institute of Chartered Accountants in England and Wales",
-            text: "Institute of Chartered Accountants in England and Wales",
-            selected: data['decision-data-regulator'] == "Institute of Chartered Accountants in England and Wales"
+            value: "Institute of Chartered Accountants in Scotland",
+            text: "Institute of Chartered Accountants in Scotland",
+            selected: data['decision-data-regulator'] == "Institute of Chartered Accountants in Scotland"
           }
         ]
       }) }}
@@ -97,34 +97,9 @@
         value: data['decision-data-profession'],
         items: [
           {
-            value: "Administration of Oaths",
-            text: "Administration of Oaths",
-            selected: data['decision-data-profession'] == "Administration of Oaths"
-          },
-          {
             value: "Chartered Accountant",
             text: "Chartered Accountant",
             selected: data['decision-data-profession'] == "Chartered Accountant"
-          },
-          {
-            value: "Insolvency Practitioner",
-            text: "Insolvency Practitioner",
-            selected: data['decision-data-profession'] == "Insolvency Practitioner"
-          },
-          {
-            value: "Local Public Audit",
-            text: "Local Public Audit",
-            selected: data['decision-data-profession'] == "Local Public Audit"
-          },
-          {
-            value: "Probate Practitioner (non-contentious probate)",
-            text: "Probate Practitioner (non-contentious probate)",
-            selected: data['decision-data-profession'] == "Probate Practitioner (non-contentious probate)"
-          },
-          {
-            value: "Statutory Audit",
-            text: "Statutory Audit",
-            selected: data['decision-data-profession'] == "Statutory Audit"
           }
         ]
       }) }}
