--- a/app/views/beta-sprint-10/regulator-england-and-wales/recognition-decision-data-new-data-draft.html
+++ b/app/views/beta-sprint-10/regulator-england-and-wales/recognition-decision-data-new-data-draft.html
@@ -180,7 +180,7 @@
 
         <h2 class="govuk-heading-s">
           Currently published version<br>
-          <span class="govuk-body"><a href="#" class="govuk-link">Public facing link</a></span>
+          <span class="govuk-body">Not published yet</span>
         </h2>
 
         <nav role="navigation" aria-labelledby="subsection-title">
