--- a/app/views/beta-sprint-10/regulator-scotland/recognition-data-1.html
+++ b/app/views/beta-sprint-10/regulator-scotland/recognition-data-1.html
@@ -71,7 +71,7 @@
           </h2>
         </div>
         <div class="rpr-internal-listing__manage-professions-container-right">
-          <form action="recognition-decision-data-new" method="post" class="form">
+          <form action="#" method="post" class="form">
             {{ govukButton({
               text: "Add new decision data"
             }) }}
