--- a/app/views/beta-sprint-10/regulator-england-and-wales/recognition-data-1.html
+++ b/app/views/beta-sprint-10/regulator-england-and-wales/recognition-data-1.html
@@ -218,7 +218,7 @@
 
       <div class="rpr-internal-listing__sort-container">
         <div class="rpr-internal-listing__sort-container-left govuk-body">
-          <span class="govuk-!-font-size-36 govuk-!-font-weight-bold">2</span> decision data found.
+          <span class="govuk-!-font-size-36 govuk-!-font-weight-bold">2</span> annual decision datasets found.
         </div>
       </div>
 
